--- a/app/views/main/_brandMenu.erb
+++ b/app/views/main/_brandMenu.erb
@@ -16,10 +16,10 @@
                 <%=link_to "점수판", "/main/score", class:"hidden-sm hidden-xs" %>
               </li>
               <li>
-                <%=link_to "Ranking", "/main/rank" %>
+                <%=link_to "Ranking", "/main/rank", class:"hidden" %>
               </li>
                <li>
-                <%=link_to "Setup", "/main/setup" %>
+                <%=link_to "Setup", "/main/setup", class:"hidden-sm hidden-xs" %>
               </li>
         <!--       <li>
                 <a href="" data-toggle="modal" data-target="#loginmodal">Login</a>
