--- a/app/views/main/cover.html.erb
+++ b/app/views/main/cover.html.erb
@@ -3,7 +3,7 @@
 
         <style>
         .cover-image{
-            background-image: url("/assets/grad_pastel.jpg");
+            background-image: url("https://s3-ap-northeast-1.amazonaws.com/okphoto/background/grad_pastel.jpg?X-Amz-Date=20151228T151915Z&X-Amz-Expires=300&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Signature=ad6c70d68125058988d37ae6582c7279cf83c3a27e64f5bbc6cd2afa277b3ca5&X-Amz-Credential=ASIAIWLBX5EZFD5TDFEA/20151228/ap-northeast-1/s3/aws4_request&X-Amz-SignedHeaders=Host&x-amz-security-token=AQoDYXdzEI///////////wEakALYXqdGhjZ2%2BdC9e8XQa%2BOzyyn%2BjfnVdRo%2BMFS/vW92eX2g1YjqwTS8sNRCAZRTL%2BOB9004y3zVymYEn%2BqeXu9dTxOV5h8eQs7qYkhwcVUPVy5FVICPV7VWaJ%2BG0vmcEFEzGI8pPARIc6UDt/x86veo3KbDWcS1O4HVGMpQrWb/GkkYMrVPV5fXYy72tCiRF0pT8aO3b6aJqKMU0Ard85Ufu3hcoHR7ftv35cEs6MVQonUyewOuD7VQDrU/uU/Jo2q68WL7KlrrnAnu/QhQkJ2kVIU1cofsqpJjPnX21GYUcyiILZGq/FDgdLLzHhkvRxZuyNbhPRS2Tp5GEmQKGuyMqYnHrc2WH0VHI98s13XqliCuzoS0BQ%3D%3D");
             background-repeat:no-repeat;
             background-size:cover;
         }
