--- a/app/views/main/cover.html.erb
+++ b/app/views/main/cover.html.erb
@@ -3,7 +3,7 @@
 
         <style>
         .cover-image{
-            background-image: url("/assets/grad_pastel.jpg");
+            background-image: url("https://s3-ap-northeast-1.amazonaws.com/okphoto/background/grad_pastel.jpg");
             background-repeat:no-repeat;
             background-size:cover;
         }
