--- a/app/views/main/setup.html.erb
+++ b/app/views/main/setup.html.erb
@@ -4,7 +4,7 @@
 
     <style>
         body{
-                background-image: url("/assets/grad_pastel2.jpg");
+                background-image: url("https://s3-ap-northeast-1.amazonaws.com/okphoto/background/grad_pastel2.jpg");
                 background-repeat:no-repeat;
                 background-size: 100% 100%;
             }
